# JuliaLearning

./: .gitignore  Project.toml  README.md  README.qmd  _quarto.yml  pyproject.toml
_freeze/notebooks/reading_FASTX_files/reading_FASTX_files/execute-results/: html.json  md.json
docs/: index.html  search.json
docs/notebooks/reading_FASTX_files/: reading_FASTX_files.html  reading_FASTX_files.md
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
notebooks/reading_FASTX_files/: example.fasta  reading_FASTX_files.qmd
notebooks/reading_FASTX_files/Pluto/: example.fasta  reading_FASTX_files.html  reading_FASTX_files.jl
